--- a/templates/organization/organization.html
+++ b/templates/organization/organization.html
@@ -31,11 +31,7 @@
                                 </th>
                                 <th class="sorting" tabindex="0" rowspan="1" colspan="1" style="width: 320px;"
                                     aria-label="Position: activate to sort column ascending">
-                                    Urine Strip
-                                </th>
-                                <th class="sorting" tabindex="0" rowspan="1" colspan="1" style="width: 320px;"
-                                    aria-label="Position: activate to sort column ascending">
-                                    Blood Strip
+                                    Status
                                 </th>
                                 <th class="sorting" tabindex="0" rowspan="1" colspan="1" style="width: 320px;"
                                     aria-label="Position: activate to sort column ascending">
@@ -50,33 +46,12 @@
                                     <td class="name">{{ data.name }}</td>
                                     <td class="address">{{ data.address }}</td>
                                     <td>
-                                        {% if data.urine_strip == 0 %}
-                                            <button type="button" class="btn btn-danger"
-                                                    data-values='{
-                                                    "id": "{{ data.id }}",
-                                                    "urine_strip": "{{ data.urine_strip }}"}'>
-                                            </button>
+                                        {% if data.status == 'red' %}
+                                        <button type="button" class="btn btn-danger"></button>
+                                        {% elif data.status == 'yellow' %}
+                                        <button type="button" class="btn btn-warning"></button>
                                         {% else %}
-                                            <button type="button" class="btn btn-success"
-                                                    data-values='{
-                                                    "id": "{{ data.id }}",
-                                                    "urine_strip": "{{ data.urine_strip }}"}'>
-                                            </button>
-                                        {% endif %}
-                                    </td>
-                                    <td>
-                                        {% if data.blood_strip == 0 %}
-                                            <button type="button" class="btn btn-danger"
-                                                    data-values='{
-                                                    "id": "{{ data.id }}",
-                                                    "blood_strip": "{{ data.blood_strip }}"}'>
-                                            </button>
-                                        {% else %}
-                                            <button type="button" class="btn btn-success"
-                                                    data-values='{
-                                                    "id": "{{ data.id }}",
-                                                    "blood_strip": "{{ data.blood_strip }}"}'>
-                                            </button>
+                                        <button type="button" class="btn btn-success"></button>
                                         {% endif %}
                                     </td>
                                     <td>
@@ -95,8 +70,7 @@
                                 <th rowspan="1" colspan="1">Device ID</th>
                                 <th rowspan="1" colspan="1">Name</th>
                                 <th rowspan="1" colspan="1">Address</th>
-                                <th rowspan="1" colspan="1">Urine Strip</th>
-                                <th rowspan="1" colspan="1">Blood Strip</th>
+                                <th rowspan="1" colspan="1">Status</th>
                                 <th rowspan="1" colspan="1">Manage</th>
                             </tr>
                             </tfoot>
@@ -130,6 +104,14 @@
                             <div class="form-group">
                                 <label for="address">Address</label>
                                 <input name="address" class="form-control" type="text" required="required">
+                            </div>
+                            <div class="form-group">
+                                <label for="blood_strip">Blood Strip</label>
+                                <input name="blood_strip" class="form-control" type="number" required="required">
+                            </div>
+                            <div class="form-group">
+                                <label for="urine_strip">Urine Strip</label>
+                                <input name="urine_strip" class="form-control" type="number" required="required">
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
