--- a/templates/health/dashboard_org.html
+++ b/templates/health/dashboard_org.html
@@ -10,8 +10,8 @@
          <table class="rectangle">
              <tr>
                  <td>Health Report</td>
-                 <td><img style="height: 20%" src="{{ STATIC_URL }}/health/images/logo-tmp.png"></td>
-                 <td><img style="height: 20%" src="{{ STATIC_URL }}/health/images/sunya_logo.png"></td>
+                 <td><img style="height: 50px" src="{{ STATIC_URL }}/health/images/logo-tmp.png"></td>
+                 <td><img style="height: 50px" src="{{ STATIC_URL }}/health/images/sunya_logo.png"></td>
              </tr>
          </table>
      </div>
