added copyright of colorlib

--- a/templates/health/health_base.html
+++ b/templates/health/health_base.html
@@ -73,7 +73,7 @@
                     <li><a href="#"><span class="icon icon-envelope pr-4"></span><span class="text">sunya@email.com</span></a></li>
                 </ul>
 
-                Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made by Sunya
+                Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
             </div>
         </div>
     </div>
