--- a/templates/organization/organization.html
+++ b/templates/organization/organization.html
@@ -103,10 +103,10 @@
                                 <label for="imei">IMEI</label>
                                 <input name="imei" class="form-control" type="text" required="required">
                             </div>
-                            <div class="form-group">
-                                <label for="device_id">Device ID</label>
-                                <input name="device_id" class="form-control" type="text" required="required">
-                            </div>
+{#                            <div class="form-group">#}
+{#                                <label for="device_id">Device ID</label>#}
+{#                                <input name="device_id" class="form-control" type="text" required="required">#}
+{#                            </div>#}
                             <div class="form-group">
                                 <label for="name">Name</label>
                                 <input name="name" class="form-control" type="text" required="required">
